update(menu): fix icon alignments in dropdown
Buttons do not support `display:flex` styles; use `display:inline-block;`.

Fixes #3439

--- a/src/components/menu/demoMenuWidth/style.css
+++ b/src/components/menu/demoMenuWidth/style.css
@@ -6,3 +6,7 @@
   min-height: 200px;
 }
 
+
+.menus {
+  width: 100%;
+}
